# homework_30_linters

./: .gitlab-ci.yml  README.md  ci.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
module_01_flask/homework/: README.md  app.py
module_02_linux/homework/hw1/: README.md  get_summary_rss.py  hw1.py  output_file.txt
module_02_linux/homework/hw2/: README.md  (+1 more)
module_04_flask/materials/: flask_post.py
module_04_flask/practice/: flask_wtf_form.py  get_number.py
module_05_processes_and_threads/practika/: popen_process.py  subprocess_run_hw.py
module_06_debugging_begin/practise/: work_3_1.py  work_3_2.py  work_4_1.py  work_4_2.py  work_4_3.py
module_07_logging_part_2/practice/: 01_logger_object.md
module_10_db1/materials/: sample_database.db
module_11_multitasking/materials/: fetching_images.py
module_12_multitasking_2/practice/: main.py
module_13_db2/practice/: 01_02_add_10_records_manually.py  01_03_add_books_from_file.py  02_kotlin.py  03_02_maluksa_post.py  test_db.py
module_14_mvc/homework/: README.md  forms.py  models.py  routes.py
module_15_networking_basics/homework/: README.md  REPORT.md  app.py  database.py  level_3.postman_collection.json  models.py  services.py
module_17_rest_api/practice/: 02_implementation.md
module_20_orm_1/homework/: ORM_db.py  app.py
module_21_orm_2/homework/: ORM_db.py  app.py  students.csv
module_22_celery/homework/: app.py  celery_app.py  config.py  requirements.txt
module_26_fastapi/homework/: main.py
module_29_testing/hw/: pytest.ini  requirements_test.txt
tests/: test_main.py
(+202 files in other folders)
