[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recipes-api"
version = "0.1.0"
dependencies = [
    "fastapi>=0.104.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "pytest-asyncio>=0.21.0",
    "alembic>=1.12.0",
    "psycopg2-binary",
    "asyncpg",
]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.6.0",
    "types-sqlalchemy>=1.4.0",
    "types-pydantic>=2.0.0",
    "bandit>=1.7.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers --strict-config"
markers = [
    "slow: marks tests as slow",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]
